--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
         <p>&copy; 2025 Générateur de feuilles. Tous droits réservés.</p>
         <p>Zone future pour publicité ou annonces.</p>
     </footer>
-
-    <script src="script.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 </body>
 
 </html>
+
