--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
     <title>Générateur de feuilles PDF/PNG</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
+    <!-- MENU ICI (tout en haut) -->
+    <header class="menu">
+        <div class="logo">Générateur de Feuilles</div>
+        <nav>
+            <ul>
+                <li><a href="#generateur">Générateur</a></li>
+                <li><a href="#types">Types de feuilles</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- CONTENU PRINCIPAL -->
+    <main id="generateur">
+        ...
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+        ...
+    </footer>
+
+</body>
+
     <header>
         <h1>Générateur de feuilles personnalisées</h1>
         <p>Créez vos feuilles vierges, quadrillées ou pointillées en PDF ou PNG !</p>
@@ -61,6 +86,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
