--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de feuilles PDF / PNG</title>
+<meta name="description" content="Créez facilement des feuilles vierges, quadrillées ou pointillées en PDF ou PNG avec notre générateur en ligne gratuit.">
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
@@ -110,6 +111,7 @@
 
 </body>
 </html>
+
 
 
 
