--- a/index.html
+++ b/index.html
@@ -1,119 +1,60 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de feuilles PDF / PNG</title>
-<meta name="description" content="Créez facilement des feuilles vierges, quadrillées ou pointillées en PDF ou PNG avec notre générateur en ligne gratuit.">
+    <meta name="description" content="Créez des feuilles vierges, quadrillées ou pointillées en PDF ou PNG. Impression A4 exacte.">
 
-    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <!-- MENU -->
-    <header class="menu">
-        <div class="logo">Générateur de Feuilles</div>
-        <nav>
-            <ul>
-                <li><a href="#generateur">Générateur</a></li>
-                <li><a href="#types">Types</a></li>
-                <li><a href="#faq">FAQ</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="menu">
+    <div class="logo">Générateur de Feuilles</div>
+</header>
 
-    <!-- CONTENU PRINCIPAL -->
-    <main>
+<main>
 
-        <!-- GÉNÉRATEUR -->
-        <section id="generateur" class="section">
-            <h1>Générateur de feuilles personnalisées</h1>
-            <p>Créez vos feuilles vierges, quadrillées ou pointillées en PDF ou PNG.</p>
+<section id="generateur" class="section">
+    <h1>Générateur de feuilles A4</h1>
+    <p>Générez instantanément vos feuilles prêtes à imprimer.</p>
 
-            <div class="controls">
-                <label>Type de feuille :</label>
-                <select id="type">
-                    <option value="vierge">Vierge</option>
-                    <option value="quadrille5">Quadrillée 5×5 mm</option>
-                    <option value="quadrille10">Quadrillée 1 cm</option>
-                    <option value="pointille5">Pointillée 5 mm</option>
-                    <option value="isometrique">Isométrique</option>
-                    <option value="hexagonale">Hexagonale</option>
-                    <option value="ligneSimple">Lignes simples</option>
-                    <option value="ligneDouble">Lignes doubles</option>
-                </select>
+    <div class="controls">
 
-                <label>Taille de la grille (mm) :</label>
-                <input type="number" id="size" value="5" min="2" max="20">
+        <label>Type de feuille :</label>
+        <select id="type">
+            <option value="quadrille5" selected>Quadrillée 5×5 mm</option>
+            <option value="vierge">Vierge</option>
+            <option value="quadrille10">Quadrillée 1 cm</option>
+            <option value="pointille5">Pointillée 5 mm</option>
+        </select>
 
-                <label>Couleur des lignes :</label>
-                <input type="color" id="color" value="#cccccc">
+        <label>Couleur :</label>
+        <input type="color" id="color" value="#cccccc">
 
-                <label>Orientation :</label>
-                <select id="orientation">
-                    <option value="portrait">Portrait</option>
-                    <option value="paysage">Paysage</option>
-                </select>
+        <button onclick="generate()">Générer</button>
 
-                <button onclick="generate()">Générer</button>
-            </div>
+    </div>
 
-            <canvas id="sheet" width="800" height="1100"></canvas>
+    <canvas id="sheet" width="794" height="1123"></canvas>
 
-            <div class="buttons">
-                <button onclick="downloadPNG()">Télécharger PNG</button>
-                <button onclick="downloadPDF()">Télécharger PDF</button>
-            </div>
-        </section>
+    <div class="buttons">
+        <button onclick="downloadPNG()">Télécharger PNG</button>
+        <button onclick="downloadPDF()">Télécharger PDF</button>
+    </div>
+</section>
 
-        <!-- TYPES -->
-        <section id="types" class="section">
-            <h2>📄 Types de feuilles disponibles</h2>
-            <ul>
-                <li>Feuille vierge</li>
-                <li>Quadrillée 5×5 mm</li>
-                <li>Quadrillée 1 cm</li>
-                <li>Pointillée</li>
-                <li>Isométrique</li>
-                <li>Hexagonale</li>
-                <li>Lignes simples et doubles</li>
-            </ul>
-        </section>
+</main>
 
-        <!-- FAQ -->
-        <section id="faq" class="section">
-            <h2>❓ FAQ</h2>
-            <p><strong>Le service est-il gratuit ?</strong><br>Oui, 100% gratuit.</p>
-            <p><strong>Les fichiers sont-ils téléchargeables ?</strong><br>Oui, en PDF et PNG.</p>
-            <p><strong>Mes données sont-elles sauvegardées ?</strong><br>Non, tout se fait localement.</p>
-        </section>
+<footer>
+    © 2025 Générateur de feuilles
+</footer>
 
-        <!-- CONTACT -->
-        <section id="contact" class="section">
-            <h2>📬 Contact</h2>
-            <p>Pour toute question ou partenariat :</p>
-            <p><strong>Email :</strong> contact@exemple.com</p>
-        </section>
-
-    </main>
-
-    <!-- FOOTER -->
-    <footer>
-        © 2025 Générateur de feuilles – Tous droits réservés
-    </footer>
-
-    <!-- SCRIPTS (TOUJOURS ICI) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
-
-
-
-
-
 
